policies/gatekeeper-requirements.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredenterprisecontrols
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredEnterpriseControls
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredenterprisecontrols

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          not container.resources.requests.cpu
          msg := sprintf("container %s must define cpu requests", [container.name])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("container %s must run as non-root", [container.name])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("container %s must not use mutable latest tag", [container.name])
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredEnterpriseControls
metadata:
  name: require-v17-enterprise-controls
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
